# Order_recognition

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile.streamlit  Fit_method2.py  Make_mats.py  Makefile  README.md  Train_model_0.py  Train_model_1.py  Use_models.py  analyze_armatura.py  app.py  check_source_data.py  config.py  create_features.py  data_inspector.py  debug_data.py  distance.py  docker-compose.yml  example.py  examples.txt  extract_pipes.py  find_ei.py  generate_mapper.py  hash2text.py  make_train_for_GPT.py  output.out  pyproject.toml  rabbit_rpc_client.py  rabbitmq.py  read_msg.py  rebbitmq.py  requirements.txt  split_by_keys.py  streamlit_rmq_client.py  test.py  test_with_api_manager.py  yandexgpt.py
.streamlit/: config.toml
core/: distance.py  hash2text.py  models_manager.py  rabbitmq.py  yandexgpt.py
data/: Selected_Emails.csv  categories.csv  categories2.csv  fine_tuning_ei.json  fine_tuning_ei.txt  fine_tuning_last.json  main_model.pkl  mesage_example.xml  method2.csv  msgs.csv  msgs_ei.csv  msgs_ei_marked.csv  otgruzki.csv  saves.csv  ygpt_keys.json  ~$Mats_with_eirar.xlsx  материалы2.xlsx
data/mails/: 1.msg  10.msg  11.msg  12.msg  13.msg  14.msg  15.msg  16.msg  17.msg  18.msg  19.msg  20.msg  21.msg  22.msg  23.msg  24.msg  25.msg  26.msg  27.msg  28.msg  29.msg  30.msg  31.msg  32.msg  33.msg  34.msg  35.msg  36.msg  37.msg  38.msg  39.msg  40.msg  6.msg  7.msg  8.msg  9.msg
data/models/: 10_model.pkl  11_model.pkl  12_model.pkl  1_model.pkl  2_model.pkl  3_model.pkl  4_model.pkl  5_model.pkl  6_model.pkl  7_model.pkl  8_model.pkl  9_model.pkl
logs/: 2024-01-10.txt
order_recognition/confs/: GPT_instruction.json  config.py  first_gpt_instruction.txt  gpt_keys.json  new_gpt_instruction.txt  second_gpt_instruct.txt
order_recognition/core/: category_mapper.py  deepseek_parser.py  distance.py  find_ei.py  gemini_parser.py  hash2text.py  my_gigachat.py  new_search.py  param_mapper.py  rabbit_rpc_client.py  rabbitmq.py  temp.py  utils.py  worker.py  yandexgpt.py
order_recognition/data/: all_pipes_only_FINAL.csv  categories.csv  method2.csv  otgruzki.csv  saves.csv
order_recognition/data/logs/: 2025-01-14.txt
order_recognition/utils/: create_features.py  data_text_processing.py  generate_mapper.py  logger.py  out_example.txt  split_by_keys.py  test_with_api_manager.py
order_recognition/work_with_models/: models_manager.py
order_recognition/work_with_models/models/: 10_model.pkl  11_model.pkl  12_model.pkl  1_model.pkl  2_model.pkl  3_model.pkl  4_model.pkl  5_model.pkl  6_model.pkl  7_model.pkl  8_model.pkl  9_model.pkl  main_model.pkl
output_data/: feedback.csv
tests/: test_distance.py
training/: Fit_method2.py  Make_mats.py  Train_model_0.py  Train_model_1.py  all_ag0.py  lora.py  make_fine_tuning.py  make_train_for_GPT.py  temp.txt  tune_yandex.py  yandex_create_data.py
training/train_data/: Clean_Emails.py  FT_lora_AG.json  FT_lora_AG_short.json  Selected_only_text.csv  Selected_only_text_answers.csv  Selected_text2_answers.txt  Selected_texts2.txt  Unique_Emails.csv  example_fine_tuning.txt
utils/: data_text_processing.py  out_example.txt
