[project]
name = "order-recognition"
version = "0.1.0"
description = "Проект для распознавания материалов в заявках клиентов"
authors = [
    {name = "Сковорода Виталий Николаевич",email = "skovoroda@spk.ru"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "aio-pika (>=9.5.4,<10.0.0)",
    "uuid (>=1.30,<2.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "python-levenshtein (>=0.26.1,<0.27.0)",
    "beautifulsoup4 (>=4.12.3,<5.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "thread (>=2.0.5,<3.0.0)",
    "pymorphy3 (>=2.0.2,<3.0.0)",
    "cryptography (>=44.0.0,<45.0.0)"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
